# bf

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  toolchain.py
assets/: 321.bf  ext1.bf  rot13.bf
src/: bf.c  bf.h  common.h  main.c  util.c  util.h
